Added Login / SignOut in the navbar

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -44,4 +44,5 @@ h1 {
   width: 480px;
   margin-top: 48px;
   /* box-shadow: 0 0 20px rgba(255, 255, 255, 0.6); */
+  filter: drop-shadow(0 0 300px rgba(255, 255, 255, 0.3));
 }
