--- a/frontend/src/styles/About.css
+++ b/frontend/src/styles/About.css
@@ -2,7 +2,7 @@
   max-width: 1200px;
   margin: 50px auto;
   padding: 20px;
-  font-family: "Arial", sans-serif;
+  font-family: "Poppins", serif;
   color: white;
 }
 
