--- a/frontend/src/styles/GetStartedBtn.css
+++ b/frontend/src/styles/GetStartedBtn.css
@@ -1,10 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 body {
   color: #ffffff;
   font-family: "Poppins", serif;
 }
-
 .getstarted-btn a {
   font-weight: 600;
   font-style: normal;
@@ -19,21 +17,39 @@ body {
   cursor: pointer;
   transition: 0.4s;
 }
-
 .getstarted-btn a:before {
   background: radial-gradient(circle, rgba(0, 234, 255, 0.3), rgba(0, 0, 0, 0));
   opacity: 0;
   content: "";
   transition: opacity 0.4s;
 }
-
 .getstarted-btn a:hover {
   background-color: #ffffff;
   color: #00121c;
   box-shadow: 0 0 15px #ffffff2f, 0 0 30px #ffffff26, 0 0 45px #ffffff2f,
     0 0 60px #ffffff33;
 }
-
 .getstarted-btn a:hover:before {
   opacity: 1;
+}
+
+/* Media Queries for Responsive Design */
+@media screen and (max-width: 768px) {
+  .getstarted-btn a {
+    margin-left: 0;
+    display: inline-block;
+    margin-top: 20px;
+  }
+  .getstarted-btn {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .getstarted-btn a {
+    font-size: 16px;
+    padding: 6px 16px;
+  }
 }
