--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,26 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap");
-
 body {
   color: #ffffff;
   font-family: "Poppins", serif;
 }
-
 h1 {
   font-weight: 300;
   font-style: normal;
   font-size: 32px;
 }
-
 .title {
-  /* Remove or adjust these styles */
-  /* font-weight: 300;
-  font-style: normal;
-  font-size: 56px;
-  width: 680px; */
   margin-left: 64px;
   margin-top: 155px;
 }
-
 .description {
   font-weight: 300;
   font-style: normal;
@@ -29,14 +20,12 @@ h1 {
   margin-left: 64px;
   margin-bottom: 36px;
 }
-
 .home {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   position: relative;
 }
-
 .home img {
   position: absolute;
   right: 64px;
@@ -45,4 +34,62 @@ h1 {
   width: 480px;
   margin-top: 68px;
   filter: drop-shadow(0 0 300px rgba(255, 255, 255, 0.3));
+}
+
+/* Media Queries for Responsive Design */
+@media screen and (max-width: 1200px) {
+  .home img {
+    width: 400px;
+    right: 40px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .description {
+    width: 500px;
+  }
+  .home img {
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    margin-left: 0;
+    margin-top: 100px;
+    width: 100%;
+    text-align: center;
+    padding: 0 20px;
+  }
+  .description {
+    width: 90%;
+    margin-left: 0;
+    font-size: 18px;
+    text-align: center;
+    padding: 0 20px;
+  }
+  .home img {
+    position: relative;
+    right: auto;
+    top: auto;
+    transform: none;
+    width: 300px;
+    margin: 40px auto;
+    align-self: center;
+  }
+  .home {
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .title {
+    margin-top: 80px;
+  }
+  .description {
+    font-size: 16px;
+  }
+  .home img {
+    width: 250px;
+  }
 }
